[gd_scene load_steps=5 format=3 uid="uid://c7dv4s3mekot1"]

[ext_resource type="PackedScene" uid="uid://bh8pwec5ry6d3" path="res://assets/models/enemies/Mossling/Mossling.glb" id="1_2s7h6"]
[ext_resource type="Script" path="res://scripts/enemy/mossling.gd" id="2_q4pxl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rufnw"]
radius = 1.94
height = 13.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hxyr0"]
points = PackedVector3Array(0, 0, 0, 20, 8, -20, 25, 0, -20, 20, -10, -20, 0, -15, -20, -20, 8, -20, 0, 13, -20, -25, 0, -20, -20, -10, -20, -13, -10, -2, 13, -10, -2, -13, 5, -2, 13, 5, -2)

[node name="Mossling" node_paths=PackedStringArray("ray") instance=ExtResource("1_2s7h6")]
script = ExtResource("2_q4pxl")
ray = NodePath("RayCast3D")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/1/rotation = Quaternion(-0.219353, -0.639501, 0.0481058, 0.735261)
bones/2/rotation = Quaternion(-0.0861776, 0.0629388, 0.125193, 0.986377)
bones/3/rotation = Quaternion(-0.0189542, 0.063568, 0.0655273, 0.995644)
bones/4/rotation = Quaternion(0.0710764, 0.0620336, 0.00134406, 0.995539)
bones/5/rotation = Quaternion(0.161347, 0.0588215, -0.0481417, 0.983966)
bones/6/rotation = Quaternion(0.217001, 0.0568723, -0.0690417, 0.972064)
bones/7/rotation = Quaternion(0.214249, 0.0585873, -0.0668619, 0.972725)
bones/8/rotation = Quaternion(0.142759, 0.0621862, -0.0566139, 0.986178)
bones/9/rotation = Quaternion(0.0117912, 0.0606491, -0.0584657, 0.996376)
bones/10/rotation = Quaternion(-0.150468, 0.0446203, -0.0865016, 0.983812)
bones/11/rotation = Quaternion(-0.692779, 0.128341, -0.630693, 0.325288)
bones/12/rotation = Quaternion(-3.7454e-09, -1.04409e-08, -0.807888, 0.589336)
bones/35/rotation = Quaternion(-0.699341, -0.144436, 0.622051, 0.321112)
bones/36/rotation = Quaternion(-9.13252e-09, 3.6268e-08, 0.806458, 0.591292)
bones/89/rotation = Quaternion(0.028265, -1.11275e-14, 6.73891e-09, 0.9996)
bones/93/rotation = Quaternion(0.028265, 1.2849e-14, -6.73891e-09, 0.9996)
bones/96/position = Vector3(0, 10.8139, -0.199835)
bones/96/rotation = Quaternion(0.228952, 0.00799594, -0.00319679, 0.9734)
bones/98/position = Vector3(2.94027, 7.47947, -0.0845472)
bones/98/rotation = Quaternion(0.999638, -0.0269196, -3.12282e-08, -6.79473e-08)
bones/104/position = Vector3(-2.94027, 7.47947, -0.0845472)
bones/104/rotation = Quaternion(0.999638, 0.0269196, 3.12282e-08, -6.79473e-08)

[node name="TopFinger_Tip_L" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(0.257671, 0.104323, -0.960584, -0.636919, -0.729253, -0.250049, -0.726594, 0.676245, -0.121462, 3.56566, 6.25953, 1.2061)

[node name="TopFinger_Middle_L" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(0.257671, 0.104323, -0.960584, -0.636919, -0.729252, -0.250049, -0.726594, 0.676245, -0.121462, 3.59031, 6.82243, 0.721815)

[node name="TopFinger_Base_L" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(0.257671, 0.104323, -0.960584, -0.636919, -0.729253, -0.250049, -0.726594, 0.676245, -0.121462, 3.37859, 7.29462, 0.22997)

[node name="RightFinger_Tip_L" parent="Armature/Skeleton3D" index="3"]
transform = Transform3D(0.702695, 0.110796, 0.702812, 0.537479, -0.729904, -0.422323, 0.466193, 0.67451, -0.572451, 2.8236, 6.33486, 1.40565)

[node name="RightFinger_Middle_L" parent="Armature/Skeleton3D" index="4"]
transform = Transform3D(0.702695, 0.110796, 0.702812, 0.537479, -0.729904, -0.422322, 0.466193, 0.67451, -0.572451, 2.66768, 6.9161, 0.96993)

[node name="RightFinger_Base_L" parent="Armature/Skeleton3D" index="5"]
transform = Transform3D(0.702695, 0.110796, 0.702812, 0.537479, -0.729904, -0.422323, 0.466193, 0.67451, -0.57245, 2.69363, 7.36618, 0.41635)

[node name="LeftFinger_Tip_L" parent="Armature/Skeleton3D" index="6"]
transform = Transform3D(-0.960371, 0.109035, 0.256512, 0.0994742, -0.725622, 0.680865, 0.26037, 0.6794, 0.68602, 3.02462, 5.84363, 0.844911)

[node name="LeftFinger_Middle_L" parent="Armature/Skeleton3D" index="7"]
transform = Transform3D(-0.960371, 0.109035, 0.256512, 0.0994742, -0.725622, 0.680866, 0.26037, 0.6794, 0.68602, 2.91762, 6.30532, 0.272729)

[node name="LeftFinger_Base_L" parent="Armature/Skeleton3D" index="8"]
transform = Transform3D(-0.960371, 0.109035, 0.256512, 0.0994742, -0.725622, 0.680865, 0.26037, 0.6794, 0.68602, 2.87662, 6.91153, -0.102149)

[node name="Hand_L" parent="Armature/Skeleton3D" index="9"]
transform = Transform3D(0.108052, 0.960172, -0.257673, -0.728265, 0.252882, 0.636931, 0.676724, 0.118832, 0.726584, 2.92852, 7.55759, -0.159462)

[node name="Forearm_L" parent="Armature/Skeleton3D" index="10"]
transform = Transform3D(0.102307, 0.960172, -0.260007, -0.713951, 0.252883, 0.652935, 0.692681, 0.118832, 0.711388, 2.55197, 10.1903, -2.71942)

[node name="Arm_L" parent="Armature/Skeleton3D" index="11"]
transform = Transform3D(0.216347, 0.960172, 0.176818, -0.403731, 0.252883, -0.879234, -0.888929, 0.118832, 0.442362, 1.90422, 11.3789, -0.0115905)

[node name="TopFinger_Tip_R" parent="Armature/Skeleton3D" index="12"]
transform = Transform3D(-0.255356, -0.108714, 0.960716, -0.623934, -0.740532, -0.249638, -0.73858, 0.663169, -0.121269, -3.57374, 6.23875, 1.18208)

[node name="TopFinger_Middle_R" parent="Armature/Skeleton3D" index="13"]
transform = Transform3D(-0.255356, -0.108714, 0.960715, -0.623934, -0.740532, -0.249638, -0.73858, 0.663169, -0.121269, -3.59519, 6.8099, 0.707404)

[node name="TopFinger_Base_R" parent="Armature/Skeleton3D" index="14"]
transform = Transform3D(-0.255356, -0.108714, 0.960716, -0.623934, -0.740532, -0.249638, -0.73858, 0.663169, -0.121269, -3.38037, 7.29006, 0.224702)

[node name="LeftFinger_Tip_R" parent="Armature/Skeleton3D" index="15"]
transform = Transform3D(-0.703951, -0.115181, -0.700846, 0.530668, -0.741143, -0.411216, 0.472063, 0.661393, -0.582851, -2.83249, 6.30934, 1.38633)

[node name="LeftFinger_Middle_R" parent="Armature/Skeleton3D" index="16"]
transform = Transform3D(-0.703952, -0.11518, -0.700846, 0.530668, -0.741143, -0.411216, 0.472063, 0.661393, -0.582851, -2.67356, 6.89767, 0.961361)

[node name="LeftFinger_Base_R" parent="Armature/Skeleton3D" index="17"]
transform = Transform3D(-0.703952, -0.11518, -0.700846, 0.530668, -0.741142, -0.411217, 0.472063, 0.661393, -0.582851, -2.69616, 7.3572, 0.415455)

[node name="RightFinger_Tip_R" parent="Armature/Skeleton3D" index="18"]
transform = Transform3D(0.959312, -0.113435, -0.258558, 0.0932995, -0.736948, 0.669479, 0.266486, 0.666363, 0.69638, -3.03173, 5.82814, 0.816338)

[node name="RightFinger_Middle_R" parent="Armature/Skeleton3D" index="19"]
transform = Transform3D(0.959312, -0.113435, -0.258557, 0.0932995, -0.736948, 0.669479, 0.266486, 0.666363, 0.69638, -2.92128, 6.29936, 0.252656)

[node name="RightFinger_Base_R" parent="Armature/Skeleton3D" index="20"]
transform = Transform3D(0.959313, -0.113435, -0.258558, 0.0932994, -0.736948, 0.66948, 0.266486, 0.666364, 0.69638, -2.8775, 6.91181, -0.111596)

[node name="Hand_R" parent="Armature/Skeleton3D" index="21"]
transform = Transform3D(-0.112444, -0.960286, 0.255358, -0.739547, 0.252515, 0.623945, 0.663647, 0.11869, 0.73857, -2.92803, 7.55888, -0.158105)

[node name="Forearm_R" parent="Armature/Skeleton3D" index="22"]
transform = Transform3D(-0.106749, -0.960286, 0.25779, -0.725518, 0.252515, 0.640203, 0.679873, 0.11869, 0.723661, -2.53508, 10.2343, -2.67081)

[node name="Arm_R" parent="Armature/Skeleton3D" index="23"]
transform = Transform3D(-0.213751, -0.960286, -0.179337, -0.392366, 0.252515, -0.884469, -0.894628, 0.11869, 0.430758, -1.89534, 11.3881, 0.0536938)

[node name="Cone" parent="Armature/Skeleton3D" index="24"]
transform = Transform3D(0.973759, -0.225023, 0.0340165, 0.207622, 0.817175, -0.537697, 0.0931968, 0.53065, 0.842452, 0.06379, 10.2258, 0.332081)

[node name="Cone_001" parent="Armature/Skeleton3D" index="25"]
transform = Transform3D(0.909049, -0.416417, 0.0150696, 0.39509, 0.84987, -0.348748, 0.132417, 0.322983, 0.937095, 0.242469, 10.2636, 0.400664)

[node name="Cone_002" parent="Armature/Skeleton3D" index="26"]
transform = Transform3D(-0.0103878, -0.478862, 0.877829, 0.699076, 0.624213, 0.348785, -0.714971, 0.617293, 0.328277, 0.381307, 10.2991, 0.511425)

[node name="Cone_003" parent="Armature/Skeleton3D" index="27"]
transform = Transform3D(0.991438, 0.115145, -0.0615764, -0.129408, 0.929394, -0.345661, 0.0174272, 0.35067, 0.936337, -0.0542488, 10.2025, 0.320966)

[node name="Cone_004" parent="Armature/Skeleton3D" index="28"]
transform = Transform3D(0.901975, 0.431525, 0.0150696, -0.39973, 0.847697, -0.348748, -0.163268, 0.308538, 0.937095, -0.129694, 10.2312, 0.368773)

[node name="Cone_005" parent="Armature/Skeleton3D" index="29"]
transform = Transform3D(-0.00856699, 0.546352, 0.837511, 0.78391, 0.523647, -0.333584, -0.620815, 0.653676, -0.432777, -0.211438, 10.2354, 0.430827)

[node name="Cone_006" parent="Armature/Skeleton3D" index="30"]
transform = Transform3D(-0.0141306, 0.373381, 0.92757, 0.443386, 0.833812, -0.328886, -0.896219, 0.406625, -0.177335, -0.322108, 10.3452, 0.453435)

[node name="Cone_007" parent="Armature/Skeleton3D" index="31"]
transform = Transform3D(0.789861, 0.0451306, 0.611623, -0.251107, -0.886062, 0.389665, 0.559521, -0.461365, -0.688533, -0.193839, 10.4562, 0.607103)

[node name="Cone_008" parent="Armature/Skeleton3D" index="32"]
transform = Transform3D(-0.702623, -0.106311, -0.703576, 0.380823, -0.891431, -0.245612, -0.601078, -0.440511, 0.666826, 0.176389, 10.4652, 0.635685)

[node name="Cone_009" parent="Armature/Skeleton3D" index="33"]
transform = Transform3D(-0.99979, -0.005024, -0.0198608, 0.0155112, -0.818941, -0.573668, -0.0133826, -0.573856, 0.818847, 0.386518, 10.5474, 0.660685)

[node name="Cone_010" parent="Armature/Skeleton3D" index="34"]
transform = Transform3D(-0.913333, -0.21225, -0.347525, 0.362512, -0.812545, -0.45646, -0.185496, -0.542882, 0.819067, -0.51617, 10.6325, 0.706335)

[node name="Cone_011" parent="Armature/Skeleton3D" index="35"]
transform = Transform3D(0.137671, -0.141963, 0.980252, 0.516188, 0.854937, 0.0513189, -0.845338, 0.498929, 0.19098, -0.62004, 10.4744, 0.547345)

[node name="Cone_012" parent="Armature/Skeleton3D" index="36"]
transform = Transform3D(-0.92677, -0.267502, 0.263703, 0.129744, -0.88679, -0.443588, 0.352511, -0.37689, 0.856557, -0.386994, 10.5475, 0.68273)

[node name="Cone_013" parent="Armature/Skeleton3D" index="37"]
transform = Transform3D(-0.931476, 0.279915, -0.232379, -0.0443437, -0.721345, -0.691155, -0.36109, -0.63349, 0.684328, 0.549638, 10.6093, 0.673054)

[node name="Cone_014" parent="Armature/Skeleton3D" index="38"]
transform = Transform3D(0.947324, -0.302937, -0.103956, 0.17033, 0.751401, -0.637483, 0.27123, 0.586196, 0.763419, 0.702324, 10.547, 0.591647)

[node name="Cone_015" parent="Armature/Skeleton3D" index="39"]
transform = Transform3D(0.080308, 0.823268, 0.561944, 0.34411, 0.506206, -0.790787, -0.935489, 0.256877, -0.242642, -0.784946, 10.6944, 0.714148)

[node name="Cone_016" parent="Armature/Skeleton3D" index="40"]
transform = Transform3D(-0.994665, -0.0996691, -0.0265873, 0.10121, -0.893133, -0.438259, 0.0199351, -0.438612, 0.898455, 0.755808, 10.7228, 0.75446)

[node name="Cone_017" parent="Armature/Skeleton3D" index="41"]
transform = Transform3D(-0.901539, -0.41662, -0.116858, 0.403435, -0.711703, -0.575083, 0.156423, -0.565604, 0.809707, -0.66259, 10.6758, 0.756229)

[node name="Head_002" parent="Armature/Skeleton3D" index="42"]
transform = Transform3D(0.999852, 0.00988559, 0.0141044, -0.00256197, 0.895139, -0.44578, -0.0170324, 0.445678, 0.895031, -0.00399108, 10.4523, -0.379983)

[node name="Plate_009" parent="Armature/Skeleton3D" index="43"]
transform = Transform3D(0.984063, -0.170246, -0.0513488, 0.0870797, 0.713142, -0.69559, 0.15504, 0.680033, 0.716602, 0.0288084, 10.154, -0.594322)

[node name="Plate_008" parent="Armature/Skeleton3D" index="44"]
transform = Transform3D(0.943882, -0.280708, -0.174039, 0.0868413, 0.719325, -0.689225, 0.318661, 0.635433, 0.703335, 0.112832, 9.89499, -0.831034)

[node name="Plate_007" parent="Armature/Skeleton3D" index="45"]
transform = Transform3D(0.87567, -0.305874, -0.373689, 0.105312, 0.876158, -0.47038, 0.471288, 0.372543, 0.799437, 0.219383, 9.60326, -1.0075)

[node name="Plate_006" parent="Armature/Skeleton3D" index="46"]
transform = Transform3D(0.782476, -0.208294, -0.586808, 0.199474, 0.976578, -0.0806597, 0.589865, -0.0539384, 0.805698, 0.310136, 9.26621, -1.0556)

[node name="Plate_005" parent="Armature/Skeleton3D" index="47"]
transform = Transform3D(0.689557, -0.0202365, -0.723949, 0.344967, 0.888106, 0.303754, 0.636796, -0.459194, 0.61938, 0.347649, 8.931, -0.95471)

[node name="Plate_004" parent="Armature/Skeleton3D" index="48"]
transform = Transform3D(0.606732, 0.16264, -0.77809, 0.47242, 0.713447, 0.517507, 0.639293, -0.681573, 0.356037, 0.317967, 8.64534, -0.743751)

[node name="Plate_003" parent="Armature/Skeleton3D" index="49"]
transform = Transform3D(0.506806, 0.277954, -0.81602, 0.537182, 0.638515, 0.55112, 0.674228, -0.717663, 0.174291, 0.235059, 8.39823, -0.486068)

[node name="Plate_002" parent="Armature/Skeleton3D" index="50"]
transform = Transform3D(0.360153, 0.302679, -0.882426, 0.511766, 0.726765, 0.458158, 0.77999, -0.616603, 0.106845, 0.129596, 8.1496, -0.247108)

[node name="Plate_001" parent="Armature/Skeleton3D" index="51"]
transform = Transform3D(0.177449, 0.209812, -0.961504, 0.351294, 0.89914, 0.261036, 0.919296, -0.384091, 0.0858456, 0.0391049, 7.85182, -0.0715865)

[node name="Waist_001" parent="Armature/Skeleton3D" index="52"]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 2.96411e-17, 7.17, 0)

[node name="Calf_L_001" parent="Armature/Skeleton3D" index="53"]
transform = Transform3D(-1, -1.50996e-07, -4.26326e-14, 1.50955e-07, -0.999733, -0.0231275, 3.49219e-09, -0.0231275, 0.999733, 0.883497, 3.72317, 0.0863728)

[node name="Thigh_L_001" parent="Armature/Skeleton3D" index="54"]
transform = Transform3D(-1, -1.50996e-07, -2.38419e-07, 1.42948e-07, -0.999442, 0.0334018, -2.43329e-07, 0.0334018, 0.999442, 0.883497, 6.21944, 0.000654279)

[node name="Calf_R_001" parent="Armature/Skeleton3D" index="55"]
transform = Transform3D(1, 1.50996e-07, 1.50996e-07, 1.54448e-07, -0.999733, -0.0231275, -1.47463e-07, -0.0231275, 0.999733, -0.883503, 3.72317, 0.0863728)

[node name="Thigh_R_001" parent="Armature/Skeleton3D" index="56"]
transform = Transform3D(1, 1.50996e-07, 3.89414e-07, 1.37904e-07, -0.999442, 0.0334018, -3.94241e-07, 0.0334018, 0.999442, -0.883503, 6.21944, 0.000654259)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.754, 0)
shape = SubResource("CapsuleShape3D_rufnw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="2"]
target_desired_distance = 3.0
path_height_offset = 2.0
path_postprocessing = 1
avoidance_enabled = true
height = 14.0
radius = 2.0
max_neighbors = 8

[node name="Area3D" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.016, -1.527)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.97595)
shape = SubResource("ConvexPolygonShape3D_hxyr0")

[node name="RayCast3D" type="RayCast3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.088, -1.311)
target_position = Vector3(0, 0, -28)
collision_mask = 2147483648

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_velocity_computed"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_exited"]
